[package]
name = "log4rs-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
log4rs = { version = "1.1.1", features = ["all_components", "background_rotation", "gzip"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.38", features = ["vendored"] }
